added llm-tester, still need finetuning and integration2
